Fixed Alignment

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -96,3 +96,11 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+@media screen and (min-width:1200px)
+{
+  .pc{
+  width:50%;
+  margin:auto;
+  }
+}
